--- a/public/assignment/views/Widget/widget-list.view.client.html
+++ b/public/assignment/views/Widget/widget-list.view.client.html
@@ -20,15 +20,19 @@
 <div class="container">
     <div ng-repeat="widget in model.widgets" ng-switch on="widget.widgetType">
         <div ng-switch-when="HEADER">
-            <ng-include src="'views/widget/widget-header.view.client.html'"></ng-include>
+            <ng-include src="'views/widget/widget-header.view.client.html'"
+                        ng-controller="HeaderWidgetController as headerCntrl"
+                        ng-init="widget"></ng-include>
         </div>
         <div ng-switch-when="IMAGE">
-            <ng-include src="'views/widget/widget-image.view.client.html'"></ng-include>
+            <ng-include src="'views/widget/widget-image.view.client.html'"
+                        ng-controller="ImageWidgetController as imageCntrl"></ng-include>
         </div>
         <div ng-switch-when="YOUTUBE">
-            <ng-include src="'views/widget/widget-youtube.view.client.html'"></ng-include>
+            <ng-include src="'views/widget/widget-youtube.view.client.html'"
+                        ng-controller="YoutubeWidgetController as youtubeCntrl"></ng-include>
         </div>
-        <a href="#/user/{{model.route.uid}}/website/{{model.route.wid}}/page/{{model.route.pid}}/widget/{{widget._id    }}" class="pull-right">
+        <a href="#/user/{{model.route.uid}}/website/{{model.route.wid}}/page/{{model.route.pid}}/widget/{{widget._id}}" class="pull-right">
             <span class="glyphicon glyphicon-cog"></span>
             <span class="glyphicon glyphicon-play"></span>
         </a>
